# soa

./: CMakeLists.txt  README.md
examples/: example.cpp  example_struct.h
include/jmarkinstall/: soa.h  tuple_utilities.h
include/jmarkinstall/soa/: array_view.h  convertable.h  soa.h  struct_view.h
